# EBCNF

./: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
configs/: ebc_lainr.yaml
ebcnf/: event_inr.py  evinr.py  lainr_ebc.py  sim_dataset.py  train_amortized.py
ebcnf/utils/: device.py
reports/ebc/: ebc_lainr_results.json
